# tech-teach

./: .dockerignore  .gitignore  Procfile  README.md  env.example  main.py  nixpacks.toml  pyproject.toml  railway.json  requirements.txt
app/: __init__.py  main.py
app/agents/: __init__.py  teaching_agent.py
app/api/: __init__.py
app/api/v1/: __init__.py
app/api/v1/endpoints/: __init__.py  agent.py  generate.py
app/core/: __init__.py  ai_service.py  config.py
app/schemas/: __init__.py  agent.py  generate.py
app/tools/: __init__.py  base_tool.py  flashcards_tool.py  mind_map_tool.py  pdf_tool.py  ppt_video_tool.py  presentation_tool.py
frontend/: index.html
